--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </a>
             <!-- <i class="bx bx-menu" id="menu-icon "></i> -->
             <ul class="nav">
-                <li>Home</li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About </a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="reviews.html">Customers</a></li>
@@ -26,23 +26,23 @@
             </div>
         </header>
         <div class="text">
-            <h1>a cup of coffee in the mornig makes you active the whole day</h1>
+            <h1>a cup of coffee in the mornig makes you ready for the day</h1>
             <p>Start your day with <br> a cup of coffee</p>
             <a href="#" class="btn"> Shop Now</a>
         </div>
         <footer>
             <div class="footer">
                 <div>
-                    <h3>Groci Store</h3>
+                    <h3>Coffee Store</h3>
                     <ion-icon name="logo-facebook" class="icon"></ion-icon>
                     <ion-icon name="logo-instagram" class="icon"></ion-icon>
                     <ion-icon name="logo-twitter" class="icon"></ion-icon>
-                    <p>grocistore@gmail.com</p>
+                    <p>coffeestore@gmail.com</p>
                 </div>
                 <div>
                     <h3>Our Products</h3>
-                    <P>Vegetables</P>
-                    <p>Fruit</p>
+                    <P>black coffee</P>
+                    <p>white coffee</p>
                 </div>
                 <div>
                   <h3>Payment</h3>
