--- a/reviews.html
+++ b/reviews.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About </a></li>
                 <li><a href="products.html">Products</a></li>
-                <li>Customers</li>
+                <li><a href="customers.html">Customers</a></li>
             </ul>
             <div class="icon">
                 <i class="bx bx-cart-alt"></i>
@@ -32,7 +32,7 @@
      </div>
    <div class="reviews">
     <div class="person1">
-        <p>"I wasn't expecting the product to be this good!" <br>Thank you Mama mboga for <br>the good products.</p>
+        <p>"I wasn't expecting the product to be this good!" <br>Thank you Coffee Store for <br>the good and quality coffee.</p>
         <img src="img/person.jpeg" alt="">
         <p>Jeshima Ngwari</p>
     </div>
