--- a/products.html
+++ b/products.html
@@ -14,9 +14,10 @@
         <!-- <i class="bx bx-menu" id="menu-icon "></i> -->
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
-            <li>About </li>
-            <li>Products</li>
-            <li>Customers</li>
+            <li><a href="About.html">About</a></li>
+            <li></a>Products</li>
+            <li><a href="reviews.html">Customers</a></li>
+           
         </ul>
         <div class="icon">
             <i class="bx bx-cart-alt"></i>
