--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,10 +18,10 @@
             <li><a href="products.html">Products</a></li>
             <li><a href="reviews.html">Customers</a></li>
         </ul>
-        <div class="icon">
+        <!-- <div class="icon">
             <i class="bx bx-cart-alt"></i>
             <i class="bx bx-search" id="search-icon"></i>
-        </div>
+        </div> -->
     </header>
     <div class="home-about">
         <div class="about">
