--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="home">
-        <header>
+        <header class="head">
             <a class="logo">
                 <img src="img/coffee.png" alt="">
             </a>
@@ -20,13 +20,9 @@
                 <li><a href="products.html">Products</a></li>
                 <li><a href="reviews.html">Customers</a></li>
             </ul>
-            <div class="icon">
-                <i class="bx bx-cart-alt"></i>
-                <i class="bx bx-search" id="search-icon"></i>
-            </div>
         </header>
         <div class="text">
-            <h1>a cup of coffee in the mornig makes you ready for the day</h1>
+            <h1>A cup of coffee in the mornig makes you ready for the day</h1>
             <p>Start your day with <br> a cup of coffee</p>
             <a href="#" class="btn"> Shop Now</a>
         </div>
