--- a/reviews.html
+++ b/reviews.html
@@ -7,11 +7,11 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reviews.css">
 
 </head>
 <body>
-     <header>
+     <header class="header">
             <a class="logo">
                 <img src="img/coffee.png" alt="">
             </a>
